--- a/src/views/corral.handlebars
+++ b/src/views/corral.handlebars
@@ -1,10 +1,10 @@
-{{>headerlogged}}
+{{>global/headerlogged}}
 
 <nav>
     <a href="/home" class="link-button">Volver al inicio</a>
-    <a href="/agregar" class="link-button">Cargar ternero o información</a>
-    <a href="/terneros-por-terminar-tratamiento" class="link-button">Ver terneros a finalizar tratamiento</a>
-    <a href="/terneros-en-tratamiento" class="link-button">Ver terneros en tratamiento</a>
+    <a href="/enfermeria" class="link-button">Cargar ternero o información</a>
+    <a href="/enfermeria/terneros-por-terminar-tratamiento" class="link-button">Ver terneros a finalizar tratamiento</a>
+    <a href="/enfermeria/terneros-en-tratamiento" class="link-button">Ver terneros en tratamiento</a>
     <a href="/terneros" class="link-button">Ver todos los terneros tratados</a>
 </nav>
 
