--- a/src/views/partials/calves/task-delete.handlebars
+++ b/src/views/partials/calves/task-delete.handlebars
@@ -21,6 +21,6 @@
       <input type="hidden" name="_id" id="idInputDeleteTask" />
     </div>
 
-    <input class="form-button" type="submit" value="Eliminar corral" />
+    <input class="form-button" type="submit" value="Borrar tarea" />
   </form>
 </div>
