--- a/src/views/partials/enfermery/calf-form.handlebars
+++ b/src/views/partials/enfermery/calf-form.handlebars
@@ -1,6 +1,6 @@
 <div class="form-container">
   <h1>Nuevo Ternero y Tratamiento</h1>
-  <form action="/calf/add" method="post">
+  <form action="/calf/addtotreatment" method="post">
     <div>
       <p>Nombre del ternero:</p>
       <input type="text" id="name" name="name" placeholder="Ej: A011" />
