--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,17 +1,17 @@
-{{>headerlogged}}
+{{>global/headerlogged}}
 
 <h1>Bienvenido al establecimiento: {{this.user.farmname}}</h1>
 <nav class="">
-    <a href="/agregar" class="link-button">Cargar ternero o información</a>
-    <a href="/terneros-por-terminar-tratamiento" class="link-button">Ver terneros a finalizar tratamiento</a>
-    <a href="/terneros-en-tratamiento" class="link-button">Ver terneros en tratamiento</a>
-    <a href="/terneros" class="link-button">Ver todos los terneros tratados</a>
+    <a href="/terneros" class="link-button">Ir a terneros</a>
+    <a href="/enfermeria" class="link-button">Ir a enfermería</a>
+    <a href="/desleche" class="link-button">Ir a desleche</a>
+    
 </nav>
 
 <div>
     {{#if tasks}}
     <div class="title title-calves">
-        <h2>Tareas a realizar cada dia de la semana</h2>
+        <h2>Tareas a realizar cada día de la semana</h2>
     </div>
     {{/if}}
     {{#each tasks}}
