--- a/src/views/enfermery/calvesEnfermery.handlebars
+++ b/src/views/enfermery/calvesEnfermery.handlebars
@@ -16,7 +16,7 @@
     </div>
 
     <div class="title">
-        <form action="/terneros" method="GET">
+        <form action="/enfermeria/terneros-enfermeria" method="GET">
         <input type="text" name="search" placeholder="Buscar terneros...">
         <h2>Ordernar de manera:</h2>
         <select id="sortOrder" name="sort" >
