--- a/src/views/enfermery/enfermery.handlebars
+++ b/src/views/enfermery/enfermery.handlebars
@@ -4,7 +4,7 @@
     <a href="/home" class="link-button">Volver al inicio</a>
     <a href="/enfermeria/terneros-por-terminar-tratamiento" class="link-button">Ver terneros a finalizar tratamiento</a>
     <a href="/enfermeria/terneros-en-tratamiento" class="link-button">Ver terneros en tratamiento</a>
-    <a href="/enfermeria/terneros" class="link-button">Ver todos los terneros tratados</a>
+    <a href="/enfermeria/terneros-enfermeria" class="link-button">Ver todos los terneros tratados</a>
 </nav>
 
 <div class="add-page-buttons">
