--- a/src/views/partials/calves/calf-form.handlebars
+++ b/src/views/partials/calves/calf-form.handlebars
@@ -14,8 +14,8 @@
       <p>Eliga el sexo</p>
       <select name="gender" id="" required>
         <option value="" disabled selected>Género</option>
-        <option value="Masculino">Masculino</option>
-        <option value="Femenino">Femenino</option>
+        <option value="Macho">Macho</option>
+        <option value="Hembra">Hembra</option>
       </select>
     </div>
     <div>
