--- a/src/views/corral.handlebars
+++ b/src/views/corral.handlebars
@@ -5,7 +5,6 @@
     <a href="/enfermeria" class="link-button">Cargar ternero o información</a>
     <a href="/enfermeria/terneros-por-terminar-tratamiento" class="link-button">Ver terneros a finalizar tratamiento</a>
     <a href="/enfermeria/terneros-en-tratamiento" class="link-button">Ver terneros en tratamiento</a>
-    <a href="/terneros" class="link-button">Ver todos los terneros tratados</a>
 </nav>
 
 <div>
@@ -122,5 +121,5 @@
 <h1>No se encontró ningún ternero en tratamiento en este corral</h1>
 {{/if}}
 
-<script src="../js/isTreatedForm.js"></script>
-<script src="../js/markAsDead.js"></script>
+<script src="../js/enfermery/isTreatedForm.js"></script>
+<script src="../js/enfermery/markAsDead.js"></script>
