--- a/src/views/calves.handlebars
+++ b/src/views/calves.handlebars
@@ -41,3 +41,4 @@
 <script src="/js/calves/toggleButtons.js"></script>
 <script src="/js/calves/tasksForms.js"></script>
 <script src="/js/calves/updateCalf.js"></script>
+<script src="/js/calves/newCalfForm.js"></script>
