--- a/src/views/enfermery/finishing-calves.handlebars
+++ b/src/views/enfermery/finishing-calves.handlebars
@@ -2,9 +2,9 @@
 
 <nav class="nav-bar">
     <a href="/home" class="link-button">Ir al inicio</a>
-    <a href="/enfermeria" class="link-button">Ir a enfermeria</a>
-    <a href="/enfermeria/terneros-en-tratamiento" class="link-button">Ver terneros en tratamiento</a>
-    <a href="/enfermeria/terneros-enfermeria" class="link-button">Ver todos los terneros tratados</a>
+    <a href="/enfermeria" class="enfermery-button">Ir a enfermeria</a>
+    <a href="/enfermeria/terneros-en-tratamiento" class="enfermery-button">Ver terneros en tratamiento</a>
+    <a href="/enfermeria/terneros-enfermeria" class="enfermery-button">Ver todos los terneros tratados</a>
 </nav>
 {{#if yesterdayCalvesWithContext}}
 <h1>Terneros que su tratamiento finalizó:</h1>
