--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -3,7 +3,7 @@
 <h1>Bienvenido al establecimiento: {{this.user.farmname}}</h1>
 <nav class="">
     <a href="/terneros" class="link-button">Ir a terneros</a>
-    <a href="/enfermeria" class="link-button">Ir a enfermería</a>
+    <a href="/enfermeria" class="enfermery-button">Ir a enfermería</a>
     <a href="/desleche" class="link-button">Ir a desleche</a>
     
 </nav>
