--- a/src/views/partials/global/header.handlebars
+++ b/src/views/partials/global/header.handlebars
@@ -1,4 +1,4 @@
 <div class="header-div">
-<img class="header-img" src="/img/logo1.jpg" alt="">
-<h1>Cattle Care</h1>
+  <img class="header-img" src="/img/logoprueba.jpg" alt="" />
+  <h1>TernTech</h1>
 </div>
