--- a/src/views/enfermery/calvesEnfermery.handlebars
+++ b/src/views/enfermery/calvesEnfermery.handlebars
@@ -2,9 +2,9 @@
 
 <nav>
     <a href="/home" class="link-button">Volver al inicio</a>
-    <a href="/enfermeria" class="link-button">Ir a enfermeria</a>
-    <a href="/enfermeria/terneros-por-terminar-tratamiento" class="link-button">Ver terneros a finalizar tratamiento</a>
-    <a href="/enfermeria/terneros-en-tratamiento" class="link-button">Ver terneros en tratamiento</a>
+    <a href="/enfermeria" class="enfermery-button">Ir a enfermeria</a>
+    <a href="/enfermeria/terneros-por-terminar-tratamiento" class="enfermery-button">Ver terneros a finalizar tratamiento</a>
+    <a href="/enfermeria/terneros-en-tratamiento" class="enfermery-button">Ver terneros en tratamiento</a>
 </nav>
 
 
