--- a/src/views/enfermery/enfermery.handlebars
+++ b/src/views/enfermery/enfermery.handlebars
@@ -2,9 +2,9 @@
 
 <nav>
     <a href="/home" class="link-button">Volver al inicio</a>
-    <a href="/enfermeria/terneros-por-terminar-tratamiento" class="link-button">Ver terneros a finalizar tratamiento</a>
-    <a href="/enfermeria/terneros-en-tratamiento" class="link-button">Ver terneros en tratamiento</a>
-    <a href="/enfermeria/terneros-enfermeria" class="link-button">Ver todos los terneros tratados</a>
+    <a href="/enfermeria/terneros-por-terminar-tratamiento" class="enfermery-button">Ver terneros a finalizar tratamiento</a>
+    <a href="/enfermeria/terneros-en-tratamiento" class="enfermery-button">Ver terneros en tratamiento</a>
+    <a href="/enfermeria/terneros-enfermeria" class="enfermery-button">Ver todos los terneros tratados</a>
 </nav>
 
 <div class="add-page-buttons">
