--- a/src/views/partials/global/headerlogged.handlebars
+++ b/src/views/partials/global/headerlogged.handlebars
@@ -1,7 +1,7 @@
 <div class="header-div">
   <div class="headerlogged-div">
-    <img class="header-img" src="/img/logo1.jpg" alt="" />
-    <h1>Cattle Care</h1>
+    <img class="header-img" src="/img/logoprueba.jpg" alt="" />
+    <h1>TernTech</h1>
   </div>
   <a href="/login/logout" class="link-button">Cerrar sesión</a>
 </div>
